--- a/3 custom scroll bar/index.html
+++ b/3 custom scroll bar/index.html
@@ -1,87 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scroll Bar</title>
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <style>
-    ::-webkit-scrollbar{
-      background-color: transparent;
-      width: 10px;
-     }
-    ::-webkit-scrollbar-thumb{
-      background:linear-gradient( #FF3CAC, #784BA0, #2B86C5);
-      border-radius: 100px;
-    }
-  </style>
-</head>
-<body class="bg-orange-400">
-  <section>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-xl rounded-lg">
-      <h2 class="card-title">Title 1</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 2</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 3</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 4</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 5</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 6</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 7</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 8</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 8</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 8</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 8</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 8</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 8</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 8</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 8</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-    <div class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg">
-      <h2 class="card-title">Title 8</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, vel porro. Ullam dolores nobis distinctio harum iusto iste quas in, velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.</p>
-    </div>
-  </section>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Scroll Bar</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style>
+      ::-webkit-scrollbar {
+        background-color: transparent;
+        width: 10px;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: linear-gradient(#ff3cac, #784ba0, #2b86c5);
+        border-radius: 100px;
+      }
+    </style>
+  </head>
+  <body class="bg-orange-400">
+    <section>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-xl rounded-lg"
+      >
+        <h2 class="card-title">Title 1</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 2</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 3</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 4</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 5</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 6</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 7</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 8</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 8</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 8</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 8</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 8</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 8</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 8</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 8</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+      <div
+        class="card w-[700px] bg-white p-5 m-5 font-sans-serif shadow-lg rounded-lg"
+      >
+        <h2 class="card-title">Title 8</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+          vel porro. Ullam dolores nobis distinctio harum iusto iste quas in,
+          velit saepe. Voluptate, accusamus quis itaque ratione vel autem ex.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
