Random emoji generator

--- a/06 Image Hover Effect/index.html
+++ b/06 Image Hover Effect/index.html
@@ -19,7 +19,7 @@
           class="w-full h-full object-cover transition-transform duration-500 group-hover:-translate-y-4"
         />
         <article
-          class="absolute top-0 left-0 w-full h-full flex flex-col justify-start items-center gap-2 py-4 text-white text-center transition-all duration-500 translate-y-full group-hover:bg-[rgb(23,23,23)] group-hover:translate-y-60"
+          class="absolute top-0 left-0 w-full h-full flex flex-col justify-start items-center gap-2 py-4 text-white text-center transition-all duration-500 translate-y-full group-hover:bg-[rgba(26,26,26,0.8)] group-hover:translate-y-60"
         >
           <h1 class="text-xl font-bold">Taj Mahal 😍</h1>
           <h4 class="text-sm">Wonders of the world 😎</h4>
@@ -27,7 +27,7 @@
       </section>
 
       <section
-        class="w-80 h-80 relative overflow-hidden rounded-lg shadow-lg group cursor-pointer"
+        class="w-80 h-80 relative  rounded-lg shadow-lg group cursor-pointer overflow-hidden"
       >
         <img
           src="https://images.pexels.com/photos/31467629/pexels-photo-31467629/free-photo-of-elegant-couple-stands-thoughtfully-on-sandy-beach.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
@@ -35,7 +35,7 @@
           class="w-full h-full object-cover transition-transform duration-500"
         />
         <article
-          class="absolute top-0 left-0 w-full h-full flex flex-col justify-center items-center text-white text-center transition-all duration-500 translate-x-full group-hover:bg-[rgba(23,23,23,0.7)] group-hover:translate-x-0"
+          class="absolute top-0 left-0 w-full h-full w-full flex flex-col justify-center items-center text-white text-center transition-all duration-500 translate-x-full group-hover:bg-gray-900 group-hover:translate-x-0 group-hover:opacity-75
         >
           <h1 class="text-xl font-bold">Photoshoot Sample 😍</h1>
           <h4 class="text-sm">Browse More 😎</h4>
